...

            <Button
                android:id="@+id/buttonTurn"
                style="@style/Button.Function"
                android:layout_width="0dp"
...
            <Button

                android:id="@+id/buttonP1Add"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
...
            <Button

                android:id="@+id/buttonDiceRoll"
                style="@style/Button.Function"
                android:layout_width="0dp"
...
            <Button

                android:id="@+id/buttonP2Add"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
...

            <Button
                android:id="@+id/buttonP1Sub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
...

            <Button
                android:id="@+id/buttonCoinFlip"
                style="@style/Button.Function"
                android:layout_width="0dp"
...
            <Button

                android:id="@+id/buttonP2Sub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
...

            <Button
                android:id="@+id/button9"
                style="@style/Button.Number"
                android:tag="9"
...

            <Button
                android:id="@+id/button5"
                style="@style/Button.Number"
                android:tag="5"
...

            <Button
                android:id="@+id/button6"
                style="@style/Button.Number"
                android:tag="6"
...

            <Button
                android:id="@+id/button1"
                style="@style/Button.Number"
                android:tag="1"
...

            <Button
                android:id="@+id/button2"
                style="@style/Button.Number"
                android:tag="2"
...

            <Button
                android:id="@+id/button00"
                style="@style/Button.Number"
                android:tag="00"
                android:text="00" />

            <Button
                android:id="@+id/button000"
                style="@style/Button.Number"
                android:tag="000"
                android:text="000" />

...

            <Button
                android:id="@+id/buttonTimer"
                style="@style/Button.Function"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/buttonShowCalc"
                style="@style/Button.Function"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/buttonReset"
                style="@style/Button.Function"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/buttonClear"
                style="@style/Button.Function"
                android:layout_width="0dp"
...

            <Button
                android:id="@+id/buttonUndo"
                style="@style/Button.Function"
                android:layout_width="0dp"
...

    <LinearLayout
        android:id="@+id/holderTimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/buttonResetTimer"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Reset"
                        android:textSize="26sp"
                        android:typeface="normal" />

                    <Button
                        android:id="@+id/buttonStartTimer"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Start"
                        android:textSize="26sp"
                        android:typeface="normal" />
...

        <View
            android:id="@+id/spacerTimerBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...

    <LinearLayout
        android:id="@+id/holderCalculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...

                    <Button
                        android:id="@+id/calc7"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc8"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc9"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calcLeftParen"
                        style="@style/Button.Function"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calcRightParen"
                        style="@style/Button.Function"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc4"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc5"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc6"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc1"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc2"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc3"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calcAdd"
                        style="@style/Button.Function"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calcMinus"
                        style="@style/Button.Function"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calc0"
                        style="@style/Button.Number"
                        android:layout_width="0dp"
...

                    <Button
                        android:id="@+id/calcEquals"
                        style="@style/Button.Function"
                        android:layout_width="0dp"
...

        <View
            android:id="@+id/spacerCalculatorBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
